# sfapi_client

./: .gitignore  404.html  LEGAL  LICENSE  README.md  gen_examples.py  gen_sync.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: black.yml  mkdocs.yml  public-tests.yml  pypi.yml  pytest.yml  python-package.yml  ruff.yml  user-testing.yml
community/contributing/: index.html
docs/: gen_examples.py  gen_ref_nav.py  index.md
docs/community/: contributing.md
docs/javascript/: apiselector.js
docs/quickstart/: index.md
docs/reference/: SUMMARY.txt
examples/: check_current_and_past_jobs.ipynb  getting_bearer_token.ipynb  index.html  index.md  run_job_and_check_status.ipynb
examples/check_current_and_past_jobs/: index.html
examples/getting_bearer_token/: index.html
examples/run_job_and_check_status/: index.html
javascript/: apiselector.js
quickstart/: index.html
reference/: SUMMARY.txt
reference/async/client/: index.html
reference/async/compute/: index.html
reference/async/exceptions/: index.html
reference/async/groups/: index.html
reference/async/jobs/: index.html
scripts/: run.py
search/: search_index.json
src/models/: JobStatusResponseSqueue.json  Sacct.json
src/sfapi_client/: __init__.py  _compute.py  _job.py  _jobs.py  _monitor.py  _utils.py  client.py  common.py  compute.py  exceptions.py  groups.py  job.py  jobs.py  paths.py  projects.py  resources.py  storage.py  users.py
tests/: conftest.py  test_api.py  test_api_async.py  test_client.py  test_client_async.py  test_compute.py  test_compute_async.py  test_groups.py  test_groups_async.py  test_jobs.py  test_jobs_async.py  test_key.py  test_path.py  test_path_async.py  test_paths.py  test_paths_async.py  test_projects.py  test_projects_async.py  test_resources.py  test_resources_async.py  test_storage.py  test_storage_async.py  test_users.py  test_users_async.py
(+58 files in other folders)
